--- a/index.html
+++ b/index.html
@@ -201,21 +201,34 @@
                     </div>
                 </div>
                 <form class="contact-form"
-                    onsubmit="event.preventDefault(); alert('Thank you for contacting Snapview Solution!');">
+                    action="https://docs.google.com/forms/u/0/d/e/1FAIpQLScBlJJ5EPsaweEaNVam_w7492TdfVCNsDcWsd0Uhj6daTkFkg/formResponse"
+                    method="POST" target="hidden_iframe" id="contact-form">
                     <div class="form-group">
                         <label for="name">Name</label>
-                        <input type="text" id="name" placeholder="John Doe" required>
+                        <input type="text" id="name" name="entry.1775059825" placeholder="John Doe" required>
                     </div>
                     <div class="form-group">
                         <label for="email">Email</label>
-                        <input type="email" id="email" placeholder="john@company.com" required>
+                        <input type="email" id="email" name="entry.912425196" placeholder="john@company.com" required>
                     </div>
                     <div class="form-group">
                         <label for="message">Message</label>
-                        <textarea id="message" rows="4" placeholder="How can we help you?" required></textarea>
+                        <textarea id="message" name="entry.393924578" rows="4" placeholder="How can we help you?"
+                            required></textarea>
                     </div>
                     <button type="submit" class="btn-primary block-btn">Send Message</button>
                 </form>
+                <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
+
+                <!-- Confirmation Modal -->
+                <div id="confirmation-modal" class="modal">
+                    <div class="modal-content">
+                        <span class="close-modal">&times;</span>
+                        <h3>Thank You!</h3>
+                        <p>Your message has been sent successfully. We'll get back to you shortly.</p>
+                        <button class="btn-primary close-btn">Close</button>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
