--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
 </head>
 
 <body>
+    <!-- Intro Video Overlay -->
+    <div id="intro-overlay">
+        <video id="intro-video" muted playsinline>
+            <source src="assets/intro.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <button id="skip-btn">Skip Intro</button>
+    </div>
+
     <nav class="navbar">
         <div class="container nav-container">
             <a href="#" class="logo-link">
