--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
 <body>
     <!-- Intro Video Overlay -->
     <div id="intro-overlay">
-        <video id="intro-video" muted playsinline>
+        <video id="intro-video" autoplay muted playsinline>
             <source src="assets/intro.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-        <button id="skip-btn">Skip Intro</button>
     </div>
 
     <nav class="navbar">
