Update contact email to snapviewsolutions@gmail.com

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                     <h2>Let's Transform Your Business</h2>
                     <p>Ready to start your data journey? Reach out to us today.</p>
                     <div class="info-item">
-                        <strong>Email:</strong> snapviewsolution@gmail.com
+                        <strong>Email:</strong> snapviewsolutions@gmail.com
                     </div>
                 </div>
                 <form class="contact-form"
