--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="#" class="logo-link">
-                <img src="assets/logo-final.png" alt="Snapview Solution" class="logo-img">
+                <img src="assets/logo-final.jpg" alt="Snapview Solution" class="logo-img">
             </a>
             <ul class="nav-links">
                 <li><a href="#transform">Home</a></li>
@@ -244,7 +244,7 @@
     <footer>
         <div class="container footer-content">
             <div class="footer-logo">
-                <img src="assets/logo-final.png" alt="Snapview Solution" class="logo-img-footer">
+                <img src="assets/logo-final.jpg" alt="Snapview Solution" class="logo-img-footer">
             </div>
             <p>&copy; 2026 Snapview Solution. All rights reserved.</p>
         </div>
