Use Unsplash images for flip cards

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css?v=flip-fix">
+    <link rel="stylesheet" href="style.css?v=images-unsplash">
 </head>
 
 <body>
@@ -64,7 +64,7 @@
             </div>
             <div class="grid-3">
                 <!-- Card 1: Data Integration -->
-                <div class="flip-card fade-in">
+                <div class="flip-card card-data fade-in">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
                             <div class="card-image-content">
@@ -98,7 +98,7 @@
                 </div>
 
                 <!-- Card 2: Predictive Analytics -->
-                <div class="flip-card fade-in delay-1">
+                <div class="flip-card card-predictive fade-in delay-1">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
                             <div class="card-image-content">
@@ -131,7 +131,7 @@
                 </div>
 
                 <!-- Card 3: Real-time Visualization -->
-                <div class="flip-card fade-in delay-2">
+                <div class="flip-card card-realtime fade-in delay-2">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
                             <div class="card-image-content">
