Reduce flip card opacity and increase flip time to 6s

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css?v=user-images">
+    <link rel="stylesheet" href="style.css?v=opacity-timing">
 </head>
 
 <body>
@@ -308,7 +308,7 @@
         </div>
     </footer>
 
-    <script src="script.js?v=flip-cards"></script>
+    <script src="script.js?v=opacity-timing"></script>
 </body>
 
 </html>
