--- a/index.html
+++ b/index.html
@@ -10,17 +10,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/jpg" href="assets/logo-final.jpg">
     <link rel="stylesheet" href="style.css?v=new-image-3">
 </head>
 
 <body>
-    <!-- Intro Video Overlay -->
-    <div id="intro-overlay">
-        <video id="intro-video" autoplay muted playsinline>
-            <source src="assets/intro.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-    </div>
+
 
     <nav class="navbar">
         <div class="container nav-container">
@@ -299,12 +294,41 @@
         </div>
     </section>
 
-    <footer>
-        <div class="container footer-content">
-            <div class="footer-logo">
-                <img src="assets/logo-final.jpg" alt="Snapview Solution" class="logo-img-footer">
+    <footer class="site-footer">
+        <div class="container">
+            <div class="footer-grid">
+                <div class="footer-brand">
+                    <img src="assets/logo-final.jpg" alt="Snapview Solution" class="logo-img-footer">
+                    <p>Transforming data into decisive action for forward-thinking enterprises.</p>
+                </div>
+                <div class="footer-col">
+                    <h4>Company</h4>
+                    <ul>
+                        <li><a href="#transform">Home</a></li>
+                        <li><a href="#solution">Solutions</a></li>
+                        <li><a href="#why-snapview">About Us</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Legal</h4>
+                    <ul>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Terms of Service</a></li>
+                        <li><a href="#">Cookie Policy</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Connect</h4>
+                    <div class="social-links">
+                        <a href="#" aria-label="LinkedIn">LinkedIn</a>
+                        <a href="#" aria-label="Twitter">Twitter</a>
+                    </div>
+                </div>
             </div>
-            <p>&copy; 2026 Snapview Solution. All rights reserved.</p>
+            <div class="footer-bottom">
+                <p>&copy; 2026 Snapview Solution. All rights reserved.</p>
+            </div>
         </div>
     </footer>
 
