--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/jpg" href="assets/logo-final.jpg">
-    <link rel="stylesheet" href="style.css?v=logo-zoom-final-force">
+    <link rel="stylesheet" href="style.css?v=logo-crop-fix">
 </head>
 
 <body>
@@ -20,7 +20,9 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="#" class="logo-link">
-                <img src="assets/logo-final.jpg" alt="Snapview Solution" class="logo-img">
+                <div class="logo-crop-container">
+                    <img src="assets/logo-final.jpg" alt="Snapview Solution">
+                </div>
             </a>
             <ul class="nav-links">
                 <li><a href="#transform">Home</a></li>
