--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             background: white !important;
             border-radius: 4px !important;
             padding: 2px !important;
+            /* Debug Marker: If you see this red dashed border, the code IS updated */
+            border: 2px dashed red !important;
         }
 
         .logo-img {
@@ -31,7 +33,8 @@
             width: auto !important;
             max-width: none !important;
             object-fit: contain !important;
-            transform: scale(1.75) !important;
+            transform: scale(2.5) !important;
+            /* Increased from 1.75 */
             margin: 0 !important;
         }
     </style>
