--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/jpg" href="assets/logo-final.jpg">
-    <link rel="stylesheet" href="style.css?v=logo-max-zoom-3.5x">
+    <link rel="stylesheet" href="style.css?v=v-logo-consolidated">
     <style>
         /* CRITICAL: Inline styles to force logo update immediately */
         .logo-crop-container {
