Update logo to user-provided cropped version

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/jpg" href="assets/logo-final.jpg">
-    <link rel="stylesheet" href="style.css?v=v-logo-max-85px">
+    <link rel="stylesheet" href="style.css?v=v-logo-cropped">
 
 </head>
 
@@ -21,7 +21,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="#" class="logo-link">
-                <img src="assets/logo-final.jpg" alt="Snapview Solution" class="logo-img">
+                <img src="assets/logo-cropped.jpg" alt="Snapview Solution" class="logo-img">
             </a>
             <ul class="nav-links">
                 <li><a href="#transform">Home</a></li>
@@ -299,7 +299,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-brand">
-                    <img src="assets/logo-final.jpg" alt="Snapview Solution" class="logo-img-footer">
+                    <img src="assets/logo-cropped.jpg" alt="Snapview Solution" class="logo-img-footer">
                     <p>Transforming data into decisive action for forward-thinking enterprises.</p>
                 </div>
                 <div class="footer-col">
